# htmx-alpine-axumkama-unocss-template

./: Cargo.toml  README.md  package.json  uno.config.ts
public/: styles.css
scripts/: run-dev.ts
src/: main.rs
src/routes/: dashboard.rs  index.rs  mod.rs
templates/: dashboard.html  index.html  shell.html
